<resources>
    <string name="app_name">Mini CRM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Customers</string>
    <string name="second_fragment_label">Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_call">make call</string>
    <string name="add_new_customer">add new customer</string>
    <string name="done">Done</string>
    <string name="description">description</string>
    <string name="phone">phone</string>
    <string name="name">Name</string>
    <string name="empty_task_message">Field cannot be empty</string>
    <string name="clear_all">delete all</string>
    <string name="delete">Delete</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
</resources>